2003-06-03  Bradley Bell  <btb@icculus.org>

	* include/physfsx.h, include/strio.h, main/cntrlcen.c,
	main/inferno.c, main/newmenu.c, misc/args.c, misc/strio.c: more
	physfs additions

	* console/CON_console.c, console/DT_drawtext.c,
	console/Makefile.am, include/CON_console.h, include/DT_drawtext.h,
	main/console.c: use native fonts for console

	* main/playsave.c: use shorts for short data

	* main/newmenu.c: fix player file deletion

	* include/physfsx.h: fix statfs includes for OS X

2003-06-02  Bradley Bell  <btb@icculus.org>

	* configure.ac, main/console.c: set console background, fix
	whitespace

2003-06-01  Bradley Bell  <btb@icculus.org>

	* Makefile.am, arch/sdl/event.c, configure.ac,
	console/CON_console.c, console/DT_drawtext.c, console/Makefile.am,
	console/internal.c, include/CON_console.h, include/DT_drawtext.h,
	include/console.h, main/console.c, main/game.c, main/gamecntl.c,
	main/gamerend.c: added console code (from SDL_console)

2003-05-30  Bradley Bell  <btb@icculus.org>

	* main/inferno.c, main/network.c: misc physfs conversions

	* arch/linux/Makefile.am, arch/linux/findfile.c,
	include/findfile.h, main/kludge.c, main/mission.c, main/newmenu.c,
	main/piggy.c: get rid of findfile stuff

	* main/gameseq.c, main/menu.c, main/newmenu.c: improved demo/plr
	loading

	* .cvsignore, 2d/.cvsignore, 3d/.cvsignore, arch/.cvsignore,
	arch/dos/.cvsignore, arch/ggi/.cvsignore, arch/linux/.cvsignore,
	arch/ogl/.cvsignore, arch/sdl/.cvsignore, arch/svgalib/.cvsignore,
	arch/win32/.cvsignore, debian/.cvsignore, iff/.cvsignore,
	libmve/.cvsignore, main/.cvsignore, main/editor/.cvsignore,
	maths/.cvsignore, mem/.cvsignore, misc/.cvsignore,
	texmap/.cvsignore, utilities/.cvsignore: update .cvsignore files

	* main/state.c: improve savegame load/save

	* main/movie.c: make -nomovies friendlier

	* 2d/pcx.c, include/physfsx.h: use physfs for writing pcx files

	* include/d_io.h, include/physfsx.h, main/inferno.c,